--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,16 @@ h2 {
   border-radius: 30px;
   border: none;
   box-shadow: 0px 0px 15px 1px rgb(32, 185, 57);
+  cursor:pointer;
 }
 
 .primary-button:hover {
   background: linear-gradient(260deg, rgb(32, 185, 57), rgb(32, 185, 57));
+}
+
+.logoutPlacement{
+  position:absolute;
+  right: 50px;
 }
 
 .secondary-button {
@@ -311,6 +317,7 @@ h2 {
   align-items: center;
   padding: 20px;
   color: rgb(255, 255, 255);
+  cursor:pointer;
 }
 
 /* USER PROFILE IMAGE IN CHAT HEADER*/
